--- a/less/fc_style.less
+++ b/less/fc_style.less
@@ -9,3 +9,59 @@ form {
 section {
 	background: ;
 }
+
+
+@import 'reset.less';
+
+/* @group Typography */
+
+
+
+/* @end */
+
+/* @group Structure */
+
+body {
+	position: relative;
+	padding-top: 1px;
+}
+
+#controls {
+	position: absolute;
+	width: 80%;
+	margin-left: -40%;
+	top: 0;
+	left: 50%;
+	background: rgba(0,0,0,.6);
+}
+
+.content_main {
+	width: 80%;
+	margin: 200px auto 20px auto;
+	}
+
+/* @end */
+
+
+/* @group Navigation */
+
+
+
+
+/* @end */
+
+/* @group Forms */
+
+@import 'form-fixes.less';
+
+
+
+/* @end */
+
+/* @group Classes/specific features */
+
+
+
+/* @end */
+
+@import "helpers.less";
