more tweaks to inputs

--- a/less/fc_style.less
+++ b/less/fc_style.less
@@ -34,6 +34,7 @@ body {
 	top: 0;
 	left: 50%;
 	height: 50px;
+	padding-top: 15px;
 	background: rgba(0,0,0,.6);
 	.border-radius(0,.5em,.5em,0);
 	
@@ -54,12 +55,20 @@ body {
 
 #control_option {
 	float:left;
+	margin: 0 15px;
 }
 
-#h2_select_chzn {
-	width: 300px;
+
+#h1lh, #h2lh, #plh{
+	width:50px;
+}
+#h1color, #h2color, #pcolor {
+	width: 60px;
 }
 
+.content_main p {
+	margin-bottom: .75em;
+}
 /* @end */
 
 
