corrected line height bug, took out fade up funciton

--- a/css/fc_style.css
+++ b/css/fc_style.css
@@ -164,7 +164,7 @@ body {
   width: 80%;
   min-width: 900px;
   margin-left: -40%;
-  top: 0;
+  top: -3px;
   left: 50%;
   height: 50px;
   padding-top: 15px;
@@ -184,6 +184,8 @@ body {
   -moz-background-clip: padding;
   -webkit-background-clip: padding-box;
   background-clip: padding-box;
+  /*border: double 4px rgba(0,0,0,.6);*/
+
 }
 .content_main {
   width: 80%;
@@ -212,6 +214,26 @@ body {
 }
 .content_main p {
   margin-bottom: .75em;
+}
+#h1_select,
+#h2_select,
+#p_select,
+#h1_select_chzn,
+#h2_select_chzn,
+#p_select_chzn,
+.chzn-container,
+.size,
+.lh,
+.color {
+  float: left;
+}
+.size label,
+.lh label,
+.color label {
+  display: block;
+}
+.hide_btn {
+  padding: 5px 10px;
 }
 /* @end */
 /* @group Navigation */
