added HTMLslider script for FF

--- a/css/fc_style.css
+++ b/css/fc_style.css
@@ -153,6 +153,24 @@ table {
     More info at: http://lesselements.com
 -----------------------------------------------------*/
 /* @group Typography */
+h1 {
+  overflow: visible;
+  font-size: 30px;
+  margin-bottom: 10px;
+}
+h2 {
+  margin-bottom: 7px;
+  font-size: 20px;
+}
+em {
+  font-style: italic;
+}
+strong {
+  font-weight: bold;
+}
+p:focus {
+  background: red;
+}
 /* @end */
 /* @group Structure */
 body {
@@ -162,16 +180,18 @@ body {
   position: relative;
   margin: 0 auto;
   width: 80%;
-  min-width: 900px;
+  min-width: 800px;
   padding-top: 1px;
   display: none;
   min-height: 500px;
+  overflow: visible;
 }
 .panel.here {
   display: block;
 }
 #controls {
   position: absolute;
+  color: white;
   width: 100%;
   top: 0;
   left: 0;
@@ -193,6 +213,11 @@ body {
   -moz-background-clip: padding;
   -webkit-background-clip: padding-box;
   background-clip: padding-box;
+}
+#controls .chzn-container,
+#controls input {
+  color: black;
+  margin-right: 5px;
 }
 .content_main {
   margin: 100px auto 20px auto;
@@ -248,13 +273,24 @@ body {
 }
 /* @end */
 /* @group Navigation */
-nav {
-  background: red;
+footer {
+  background: purple;
 }
 #panel_nav {
   width: 80%;
   min-width: 900px;
   margin: 0 auto;
+}
+#panel_nav li {
+  float: left;
+  display: inline;
+}
+#panel_nav a {
+  display: block;
+  padding: 5px 25px;
+}
+#panel_nav a.here {
+  background: white;
 }
 /* @end */
 /* @group Forms */
@@ -305,6 +341,18 @@ textarea {
 /* @end */
 /* @end */
 /* @group Classes/specific features */
+#logo {
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+  width: 100px;
+  height: 100px;
+  background: orange;
+  float: left;
+}
 /* @end */
 /* @group Helper Classes */
 /* =============================================================================
