--- a/less/fc_style.less
+++ b/less/fc_style.less
@@ -1,14 +1,10 @@
 @color: #110000;
 @fonts: Georgia, "Times New Roman", serif;
+@sans-serif: Verdana, Helvetica, Arial, 'sans-serif';
+@pagewidth: 920px;
 
-form {
-  color: @color;
-  font-family: @fonts;
-}
 
-section {
-	background: ;
-}
+
 
 
 @import 'reset.less';
@@ -33,22 +29,24 @@ em {
 strong { 
 	font-weight: bold;
 }
-p:focus {
-	background: red;
-}
+
 /* @end */
 
 /* @group Structure */
 
 body {
-	position: relative;
+	
+	background: purple;
+}
 
+#wrapper {
+background: white;
 }
 .panel {
 	position:relative;
 	margin:0 auto;
 	width: 80%;
-	min-width: 800px;
+	min-width: @pagewidth;
 	padding-top: 1px;
 	display: none;
 	min-height: 500px;
@@ -66,9 +64,11 @@ body {
 	top: 0;
 	left: 0;
 	height: 50px;
-	padding-top: 15px;
+	padding-top: 10px;
 	background: rgba(0,0,0,.6);
 	.border-radius(0,.5em,.5em,0);
+	font-family: @sans-serif;
+	font-size: .75em;
 	
 }
 
@@ -78,13 +78,13 @@ body {
 }
 
 .content_main {
-	
-	margin: 100px auto 20px auto;
+	position: relative;
+	margin: 100px auto 0px auto;
 	}
 
 .control {
 	display:none;
-	font-size: .875em;
+
 }
 .control.active {
 	display:block;
@@ -104,21 +104,36 @@ body {
 }
 
 .content_main p {
-	margin-bottom: .75em;
+	margin-bottom: .8em;
 }
 
 #h1_select, #h2_select, #p_select,
 #h1_select_chzn, #h2_select_chzn, #p_select_chzn, .chzn-container,
- .size, .lh, .color {
+ .element, .font-family, .size, .lh, .color {
 	float: left;
+	margin-right: 10px;
 }
 
-.size label, .lh label, .color label {
+.element label, .font-family label,.size label, .lh label, .color label,#bg_sec label {
 	display: block;
+	margin-bottom:3px;
 }
 
+.element {
+	padding:0 6px 0 0;
+	margin:0 10px 0 0;
+	border-right: solid 1px white;
+}
+.element label {
+	margin-left: 15px;
+}
+
+#control_option_chzn {
+	margin-left: 15px;
+}
 .hide_btn {
 	padding: 5px 10px;
+	margin-top: 15px;
 }
 
 #hide_controls {
@@ -133,7 +148,12 @@ body {
 
 /* @group Navigation */
 footer {
-	background: purple;
+	margin: 0 auto;
+	padding: 0;
+	background: red;
+	width: 80%;
+	min-width: @pagewidth;
+	
 }
 
 #panel_nav {
