--- a/less/reset.less
+++ b/less/reset.less
@@ -1,8 +1,5 @@
-
+/*Based on the Eric Meyer reset*/
 /* @group Reset */
-
-
-
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
