restored google fonts functionality

--- a/css/fc_style.css
+++ b/css/fc_style.css
@@ -152,10 +152,12 @@ h1 {
   overflow: visible;
   font-size: 30px;
   margin-bottom: 10px;
+  text-rendering: optimizeLegibility;
 }
 h2 {
   margin-bottom: 7px;
   font-size: 20px;
+  text-rendering: optimizeLegibility;
 }
 em {
   font-style: italic;
@@ -190,11 +192,16 @@ body {
   width: 80%;
   padding-top: 15px;
   display: none;
-  min-height: 400px;
+  min-height: 420px;
   overflow: visible;
 }
 .panel.here {
   display: block;
+}
+#content_main {
+  height: 480px;
+  overflow: scroll;
+  padding-bottom: 40px;
 }
 #controls {
   position: absolute;
@@ -223,7 +230,8 @@ body {
 .control {
   display: none;
 }
-.control.active {
+.control.active,
+.no-js .control {
   display: block;
 }
 #control_option {
@@ -234,7 +242,8 @@ body {
 #h1lh,
 #h2lh,
 #plh {
-  width: 50px;
+  /*width:50px;*/
+
 }
 #h1color,
 #h2color,
@@ -249,18 +258,19 @@ body {
 #p_select,
 #h1_select_chzn,
 #h2_select_chzn,
-#p_select_chzn,
-.chzn-container,
+#p_select_chzn {
+  /*float: left;*/
+
+  clear: both;
+  margin-right: 15px;
+}
 .element,
 .font-family,
 .size,
 .lh,
 .color {
-  /*float: left;*/
-
-  clear: both;
-  margin-right: 15px;
   margin-left: 15px;
+  margin-bottom: 11.25px;
 }
 .element label,
 .font-family label,
@@ -275,9 +285,7 @@ body {
   padding: 0 0 11.25px 0;
   margin: 0 15px 11.25px 15px;
   border-bottom: solid 1px white;
-}
-.element label {
-  margin-left: 15px;
+  width: 90%;
 }
 .hide_btn {
   padding: 5px 10px;
@@ -338,7 +346,8 @@ footer {
   margin: 0 auto;
   padding: 0;
   width: 80%;
-  min-width: 920px;
+  /*min-width: @pagewidth;*/
+
 }
 #panel_nav {
   width: 80%;
@@ -504,6 +513,12 @@ textarea {
 
    ========================================================================== */
 @media only screen and (min-width: 480px) {
+  .panel {
+    min-height: 320px;
+  }
+  #content_main {
+    height: 320px;
+  }
   #h1_select,
   #h2_select,
   #p_select,
@@ -516,10 +531,11 @@ textarea {
   .size,
   .lh,
   .color {
-    float: left;
-    clear: none;
-    margin-right: 15px;
-    margin-left: 15px;
+    /*	float: left;
+  	clear:none;
+  	margin-right: @spacing;
+  	margin-left: @spacing;*/
+  
   }
   .control {
     clear: both;
@@ -559,12 +575,23 @@ textarea {
     margin: 0 10px 0 0;
     border-right: solid 1px white;
     border-bottom: none;
+    width: auto;
+  }
+  #h1lh,
+  #h2lh,
+  #plh {
+    width: 50px;
   }
 }
 @media only screen and (min-width: 960px) {
   .panel {
     min-width: 920px;
     padding-top: 80px;
+    min-height: 320px;
+  }
+  #content_main {
+    height: 320px;
+    overflow: auto;
   }
   #control_option {
     float: left;
@@ -595,5 +622,8 @@ textarea {
     margin: 0 10px 0 0;
     border-right: solid 1px white;
     border-bottom: none;
+  }
+  .element label {
+    margin-left: 15px;
   }
 }
