--- a/less/480.less
+++ b/less/480.less
@@ -1,10 +1,19 @@
+.panel {
+	min-height: 320px;
+}
+
+#content_main {
+	height: 320px;
+}
+
+
 #h1_select, #h2_select, #p_select,
 #h1_select_chzn, #h2_select_chzn, #p_select_chzn, .chzn-container,
  .element, .font-family, .size, .lh, .color {
-	float: left;
+/*	float: left;
 	clear:none;
 	margin-right: @spacing;
-	margin-left: @spacing;
+	margin-left: @spacing;*/
 }
 .control {
 	clear:both;
