--- a/less/768.less
+++ b/less/768.less
@@ -26,4 +26,8 @@
 	margin:0 10px 0 0;
 	border-right: solid 1px white;
 	border-bottom: none;
+	width: auto;
+}
+#h1lh, #h2lh, #plh{
+	width:50px;
 }
