--- a/less/fullwidth.less
+++ b/less/fullwidth.less
@@ -1,7 +1,15 @@
 .panel {
 	min-width: @pagewidth;
 	padding-top: 80px;
+	min-height: 320px;
 }
+
+
+#content_main {
+	height: 320px;
+	overflow: auto;
+}
+
 
 #control_option {
 	float:left;
@@ -26,4 +34,7 @@
 	margin:0 10px 0 0;
 	border-right: solid 1px white;
 	border-bottom: none;
+}
+.element label {
+	margin-left: 15px;
 }
