--- a/less/fullwidth.less
+++ b/less/fullwidth.less
@@ -1,13 +1,18 @@
+#content_main {
+	background: orange;
+}
 .panel {
 	min-width: @pagewidth;
 	padding-top: 80px;
 	min-height: 320px;
 }
 
-
 #content_main {
-	height: 320px;
-	overflow: auto;
+	overflow: visible;
+}
+#nav_controls {
+	min-width: @pagewidth;
+	margin: -30px auto 0 auto;
 }
 
 
@@ -16,25 +21,39 @@
 	margin: 0 15px;
 }
 
+ .chzn-container, .font-family, .size, .lh, .color {
+	float: left;
+	clear:none;
+	margin-right: @spacing;
+	margin-left:0;
+}
+#h1_select, #h2_select, #p_select,
+#h1_select_chzn, #h2_select_chzn, #p_select_chzn{
+	margin-left:0;
+}
+
 #h1_select, #h2_select, #p_select,
 #h1_select_chzn, #h2_select_chzn, #p_select_chzn, .chzn-container,
  .element, .font-family, .size, .lh, .color {
 	float: left;
 	clear:none;
 	margin-right: @spacing;
-	margin-left: @spacing;
+	
 }
 
 .control {
-	margin-left: 170px;
+
+
 }
 
 .element {
 	padding:0 6px 0 0;
-	margin:0 10px 0 0;
+	margin:0 10px 0 @spacing;
 	border-right: solid 1px white;
 	border-bottom: none;
+	width: 145px;
+	
 }
 .element label {
-	margin-left: 15px;
+	margin-left: 0;
 }
