--- a/less/768.less
+++ b/less/768.less
@@ -1,3 +1,8 @@
+#content_main {
+	
+	background:green;
+}
+
 .panel {
 	padding-top: 80px;
 }
@@ -10,24 +15,31 @@
 #h1_select, #h2_select, #p_select,
 #h1_select_chzn, #h2_select_chzn, #p_select_chzn, .chzn-container,
  .element, .font-family, .size, .lh, .color {
-	float: left;
+/*	float: left;
 	clear:none;
-	margin-right: @spacing;
-	margin-left: @spacing;
+	margin-right: @spacing;*/
+	/*margin-left: @spacing;*/
 }
 
 .control {
-	margin-left: 170px;
+	/*margin-left: 170px;*/
 	clear:none;
 }
 
 .element {
 	padding:0 6px 0 0;
-	margin:0 10px 0 0;
-	border-right: solid 1px white;
-	border-bottom: none;
+	margin:0 10px 0 @spacing;
+
 	width: auto;
 }
 #h1lh, #h2lh, #plh{
 	width:50px;
+}
+#panel_nav {
+	float: right;
+	clear:none;
+}
+
+footer p {
+	float:left;
 }
