--- a/less/fc_style.less
+++ b/less/fc_style.less
@@ -13,16 +13,19 @@
 
 h1 {
 	overflow:visible;
-	
+	font-family: "Georgia", 'serif';
 	font-size: 30px;
-	margin-bottom: 10px;
+	margin-bottom: @spacing;
 	text-rendering: optimizeLegibility;
 }
-
+h1 {
+	font-family: Ultra;
+}
 h2 {
-	margin-bottom: 7px;
+	margin-bottom: @spacing;
 	font-size: 20px;
 	text-rendering: optimizeLegibility;
+	font-family: "Trebuchet MS", 'sans-serif';
 }
 
 em {
@@ -33,8 +36,13 @@ strong {
 	font-weight: bold;
 }
 
+p {
+	font-family: "Trebuchet MS", 'sans-serif';
+}
+
 #wrapper p {
 	padding-bottom: 10px;
+	
 }
 
 .warning {
@@ -56,34 +64,44 @@ background: white;
 
 }
 .panel {
-	position:relative;
+	
 	margin:0 auto;
 	width: 80%;
 	padding-top: @spacing;
 	display: none;
-	min-height: 420px;
-	overflow: visible;
+	min-height: 400px;
+	padding-bottom: 50px;
+
 }
 
 .panel.here {
 	display: block;
 }
 #content_main {
-	height: 480px;
+
 	overflow: scroll;
-	padding-bottom: 40px;
+}
+
+#nav_controls {
+	background: #292929;
+		width: 80%;
+	margin:-30px auto 0;
+
+	
+	.rounded(@radius);
 }
 #controls {
-	position: absolute;
+	/*position: absolute;*/
+	clear: both;
 	color: white;
 		width: 100%;
-		bottom: -20px;
-		left: 0;
-		height: 50px;
+		/*bottom: -20px;*/
+		/*left: 0;*/
+		/*height: 50px;*/
 		padding-top: 10px;
-		background: rgba(0,0,0,.6);
-		background: #292929;
-		.rounded(@radius);
+/*		background: rgba(0,0,0,.6);
+		background: #292929;*/
+		
 		font-family: @sans-serif;
 		font-size: .75em;
 	
@@ -117,16 +135,16 @@ background: white;
 	width: 60px;
 }
 
-.content_main p {
-	margin-bottom: .8em;
-}
+
 
 #h1_select, #h2_select, #p_select,
 #h1_select_chzn, #h2_select_chzn, #p_select_chzn
  {
 	/*float: left;*/
 	clear:both;
-	margin-right: @spacing;
+	margin-right: @spacing/3;
+	margin-bottom: @spacing*.75;
+	width: 100%;
 
 }
 
@@ -148,7 +166,7 @@ background: white;
 
 
 #control_option_chzn {
-	
+	font-family: Verdana, 'sans-serif';
 }
 .hide_btn {
 	padding: 5px 10px;
@@ -194,16 +212,26 @@ background: white;
 footer {
 	margin: 0 auto;
 	padding: 0;
-	
+	clear:both;
 	width: 80%;
+	font-family: @sans-serif;
 	/*min-width: @pagewidth;*/
 	
 }
 
+footer p { 
+	margin: @spacing 0;
+	color:white;
+}
+footer p a {
+	color: white;
+}
 #panel_nav {
-	width: 80%;
-	min-width: 900px;
-	margin: 0 auto;
+	
+	font-size: .8em;
+	
+	clear: both;
+	margin: @spacing 0;
 }
 
 #panel_nav li {
@@ -212,11 +240,14 @@ footer {
 }
 #panel_nav a {
 	display: block;
-	padding: 5px 25px;
+	color:white;
+	text-decoration: none;
+	padding: 8px 20px;
 }
 
 #panel_nav a.here {
-	background: white;
+	background: #666;
+	.rounded(@radius);
 }
 /* @end */
 
