--- a/css/fc_style.css
+++ b/css/fc_style.css
@@ -179,9 +179,9 @@ p {
 .warning {
   background: rgba(255, 155, 155, 0.8);
   padding: 15px;
-  -webkit-border-radius: 0.5em;
-  -moz-border-radius: 0.5em;
-  border-radius: 0.5em;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  border-radius: 8px;
   -moz-background-clip: padding;
   -webkit-background-clip: padding-box;
   background-clip: padding-box;
@@ -212,9 +212,9 @@ body {
   background: #292929;
   width: 80%;
   margin: -30px auto 0;
-  -webkit-border-radius: 0.5em;
-  -moz-border-radius: 0.5em;
-  border-radius: 0.5em;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  border-radius: 8px;
   -moz-background-clip: padding;
   -webkit-background-clip: padding-box;
   background-clip: padding-box;
@@ -309,49 +309,14 @@ body {
   padding: 5px 10px;
   margin-top: 15px;
   margin-left: 15px;
-}
-#hide_controls {
-  position: absolute;
-  display: block;
-  text-align: center;
-  line-height: 24px;
-  font-size: 2.5em;
-  text-decoration: none;
-  right: 20px;
-  top: 12px;
-  text-indent: 1px;
-  font-famliy: Verdana, Helvetica, Arial, 'sans-serif';
-  color: white;
-  width: 30px;
-  height: 30px;
-  -webkit-border-radius: 10%;
-  -moz-border-radius: 10%;
-  border-radius: 10%;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  border-radius: 8px;
   -moz-background-clip: padding;
   -webkit-background-clip: padding-box;
   background-clip: padding-box;
-  border: 1px solid white;
-  background: #7d7e7d;
-  /* Old browsers */
-
-  background: -moz-linear-gradient(top, #7d7e7d 0%, #0e0e0e 100%);
-  /* FF3.6+ */
-
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #7d7e7d), color-stop(100%, #0e0e0e));
-  /* Chrome,Safari4+ */
-
-  background: -webkit-linear-gradient(top, #7d7e7d 0%, #0e0e0e 100%);
-  /* Chrome10+,Safari5.1+ */
-
-  background: -o-linear-gradient(top, #7d7e7d 0%, #0e0e0e 100%);
-  /* Opera 11.10+ */
-
-  background: -ms-linear-gradient(top, #7d7e7d 0%, #0e0e0e 100%);
-  /* IE10+ */
-
-  background: linear-gradient(top, #7d7e7d 0%, #0e0e0e 100%);
-  /* W3C */
-
+  border: solid 1px white;
+  background: #ccc;
 }
 /* @end */
 /* @group Navigation */
@@ -393,9 +358,9 @@ footer p a {
 }
 #panel_nav a.here {
   background: #666;
-  -webkit-border-radius: 0.5em;
-  -moz-border-radius: 0.5em;
-  border-radius: 0.5em;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  border-radius: 8px;
   -moz-background-clip: padding;
   -webkit-background-clip: padding-box;
   background-clip: padding-box;
