--- a/less/768.less
+++ b/less/768.less
@@ -22,8 +22,8 @@
 }
 
 .element {
-	padding:0 6px 0 0;
-	margin:0 10px 0 @spacing;
+	/*padding:0 6px 0 0;*/
+	/*margin:0 10px 0 @spacing;*/
 
 	width: auto;
 }
