--- a/less/fc_style.less
+++ b/less/fc_style.less
@@ -50,6 +50,10 @@ p {
 	padding: @spacing;
 	.rounded(@radius);
 }
+
+.panel a, .panel a:link, .panel a:visited {
+	color: inherit;
+}
 /* @end */
 
 /* @group Structure */
