--- a/less/fullwidth.less
+++ b/less/fullwidth.less
@@ -37,7 +37,13 @@
 	margin-right: @spacing;
 	
 }
+select.variant_select {
+	display:none;
+}
 
+.no-js select.variant_select {
+	display: block;
+}
 .control {
 
 
